@@ -919,9 +919,11 @@ if ($flag eq 'g' || $flag eq 'I') {
 		exit 0;
 	}
 }
-$secure_pattern = $pattern;
-$secure_pattern =~ s/[^0-9a-zA-Z_-]//g;		# to shut security hole
-unless (open(PIPE, "@globalpath@ -x$flag \"$secure_pattern\" |")) {
+#
+# fork and exec global(1) to avoid command substitutions in $pattern.
+#
+open(PIPE, "-|") || exec '@globalpath@', '-x'.$flag, $pattern;
+if ($?) {	
 	print "<H1><FONT COLOR=#cc0000>Error</FONT></H1>\n";
 	print "<H3>Cannot execute global. <A HREF=$htmlbase/mains.@normal_suffix@>[return]</A></H3>\n";
 	print "@body_end@\n";
